lesson13-Zavorotnyi-Oleksandr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: course-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-app

  template:
    metadata:
      labels:
        app: course-app

    spec:
      containers:
        - name: course-app
          image: nginx:stable
          ports:
            - containerPort: 80
