lesson13-Zavorotnyi-Oleksandr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app

spec:
  selector:
    app: course-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
